--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="subnav">
         <button class="subnavbtn">10 <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
-            <a id="a10or" href="#">Giữa K1</a>
+            <a id="a10or" href="./gdcd-test/gdcd10gk1.html">Giữa K1</a>
             <a id="a10or" href="#">Cuối K1</a>
             <a id="a10or" href="#">Giữa K2</a>
             <a id="a10or" href="#">Cuối K2</a>
@@ -157,7 +157,7 @@
       <div class="subnav">
         <button class="subnavbtn">11 <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
-            <a id="a11ly" href="#">Giữa K1</a>
+            <a id="a11ly" href="./gdcd-test/gdcd11gk1.html">Giữa K1</a>
             <a id="a11ly" href="#">Cuối K1</a>
             <a id="a11ly" href="#">Giữa K2</a>
             <a id="a11ly" href="#">Cuối K2</a>
@@ -167,7 +167,7 @@
         <button class="subnavbtn">12 <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
             <a id="a12ye" href="./gdcd-test/gdcd12gk1.html">Giữa K1</a>
-            <a id="a12ye" href="#">Cuối K1</a>
+            <a id="a12ye" href="./gdcd-test/gdcd12gk1.html">Cuối K1</a>
             <a id="a12ye" href="#">Giữa K2</a>
             <a id="a12ye" href="#">Cuối K2</a>
         </div>
@@ -176,7 +176,7 @@
         <button class="subnavbtn">TN <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
             <a id="atnye" href="./gdcd-test/gdthitn1.html">Đề 1</a>
-            <a id="atnye" href="./gdcd-test/bt1.html">Đề 2</a>
+            <a id="atnye" href="#">Đề 2</a>
             <a id="atnye" href="#">Đề 3</a>
             <a id="atnye" href="#">Đề 4</a>
             <a id="atnye" href="#">Đề 5</a>
