--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <a id="atnye" href="#">Đề 2</a>
             <a id="atnye" href="#">Đề 3</a>
             <a id="atnye" href="#">Đề 4</a>
-            <a id="atnye" href="#">Đề 5</a>
+            <a id="atnye" href="./gdcd-test/text-speech.html">Đề 5</a>
         </div>
       </div>
     
