--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
       <div class="subnav">
         <button class="subnavbtn">12 <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
-            <a id="a12ye" href="./gdcd-test/gdcd12gk1.html">Giữa K1</a>
-            <a id="a12ye" href="./gdcd-test/gdcd12gk1.html">Cuối K1</a>
+            <a id="a12ye" href="./gdcd-test/gdcd12gk1-ntp.html">Giữa K1</a>
+            <a id="a12ye" href="./gdcd-test/gdcd12gk1-vh.html">Cuối K1</a>
             <a id="a12ye" href="#">Giữa K2</a>
             <a id="a12ye" href="#">Cuối K2</a>
         </div>
