--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
     .subnav:hover .subnav-content {
       display: block;
     }
-    #a6whi{color:red;}
+    #a6whi{color:white;}
     #a7lgr{color:orange;}
-    #a8lbl{color:red;}
+    #a8lbl{color:white;}
     #a9blu{color:orange;}
-    #a10or{color:red;}
+    #a10or{color:white;}
     #a11ly{color:orange;}
-    #a12ye{color:red;}
+    #a12ye{color:white;}
     
     </style>
     
