--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
         <button class="subnavbtn">TN <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
             <a id="atnye" href="./gdcd-test/gdthitn1.html">Đề 1</a>
-            <a id="atnye" href="#">Đề 2</a>
+            <a id="atnye" href="./gdcd-test/text-speech.html">Đề 2</a>
             <a id="atnye" href="#">Đề 3</a>
             <a id="atnye" href="#">Đề 4</a>
-            <a id="atnye" href="./gdcd-test/text-speech.html">Đề 5</a>
+            <a id="atnye" href="./gdcd-test/thi-mau.html">Đề 5</a>
         </div>
       </div>
     
