--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <button class="subnavbtn">TN <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
             <a id="atnye" href="./gdcd-test/gdthitn1.html">Đề 1</a>
-            <a id="atnye" href="#">Đề 2</a>
+            <a id="atnye" href="./gdcd-test/anh6-stater.html">Đề 2</a>
             <a id="atnye" href="#">Đề 3</a>
             <a id="atnye" href="#">Đề 4</a>
             <a id="atnye" href="#" onclick="creat()">Đề 5</a>
