--- a/anh6-stater.html
+++ b/anh6-stater.html
@@ -36,7 +36,7 @@
 <body>
     <div id="container">
         <div class="scroll1-div">
-            <object width="100%" height="100%" data="gdcd-test/En06-S.pdf"></object>
+            <object width="100%" height="100%" data="En06-S.pdf"></object>
 
         </div>
         <div id="right" class="section">
